feature/deseng745: Updated project definition to add project type multiselect values.
